# StreamingApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
StreamingApp/: CMakeLists.txt  StreamingApp.cpp  StreamingApp.h
StreamingApp/app/: index.html  main.cpp
StreamingApp/includes/: FramePostProcessingHandler.hpp  GStreamerWebcamProvider.hpp  GtkWindowPipeline.hpp  PostProcessingFaceBlurLayer.hpp  PostProcessingFaceDetectionLayer.hpp  PostProcessingFrameDenoisingLayer.hpp  PostProcessingHumanSegmentationLayer.hpp  PostProcessingLayerBase.hpp  Server.hpp  SingleCastDelegate.hpp  WebrtcPipeline.hpp
StreamingApp/includes/Interfaces/: IMediaPipeline.hpp
StreamingApp/src/: FramePostProcessingHandler.cpp  GStreamerWebcamProvider.cpp  GtkWindowPipeline.cpp  PostProcessingFaceBlurLayer.cpp  PostProcessingFaceDetectionLayer.cpp  PostProcessingFrameDenoisingLayer.cpp  PostProcessingHumanSegmentationLayer.cpp  PostProcessingLayerBase.cpp  Server.cpp  WebrtcPipeline.cpp
